--- a/package.xml
+++ b/package.xml
@@ -6,14 +6,13 @@
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="mahisorn.w@hiveground.com">Mahisorn Wongphati</maintainer>
+  <maintainer email="labiybafakh@gmail.com.com">Muhammad Labiyb Afakh</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>BSD</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
@@ -26,6 +25,8 @@
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+<author email="labiybafakh@gmail.com.com">Muhammad Labiyb Afakh</author>
+
 
 
   <!-- The *_depend tags are used to specify dependencies -->
