--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,4 +45,16 @@ install(TARGETS
 
 ament_target_dependencies(${PROJECT_NAME} rclcpp geometry_msgs)
 
+if(BUILD_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
+  ament_add_gtest(${PROJECT_NAME}_test test/main_test.cpp)
+  target_include_directories(${PROJECT_NAME}_test PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+  )
+  ament_target_dependencies(${PROJECT_NAME}_test
+    geometry_msgs
+  )
+endif()
+
 ament_package()
