--- a/package.xml
+++ b/package.xml
@@ -44,6 +44,7 @@
   <build_depend>geometry_msgs</build_depend>
   <run_depend>rclcpp</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>                               
